fix preview image width on mobile

--- a/src/www/css/extra.css
+++ b/src/www/css/extra.css
@@ -50,4 +50,7 @@ table td {
 		min-height: 60px;
 		height: auto;
 	}
+	#preview {
+		width: 100%;
+	}
 }
